--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build-storybook": "storybook build",
     "storybook": "storybook dev -p 6006",
     "start": "next start",
-    "lint": "next lint && stylelint --allow-empty-input \"**/*.{css,scss}\"",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "prepare": "husky install",
     "test": "jest",
     "test:e2e": "TS_NODE_PROJECT='./tsconfig.cucumber.json' cucumber-js",
@@ -19,9 +19,8 @@
       "prettier --write",
       "eslint --fix"
     ],
-    "src/**/*.{css,scss}": [
-      "prettier --write",
-      "stylelint --allow-empty-input \"**/*.{css,scss}\""
+    "src/**/*.{css}": [
+      "prettier --write"
     ]
   },
   "dependencies": {
@@ -62,27 +61,18 @@
     "@typescript-eslint/parser": "^6.9.1",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.53.0",
-    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "14.0.2",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-export-scope": "^2.3.0",
     "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-jest-dom": "^5.1.0",
     "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-storybook": "^0.6.15",
-    "eslint-plugin-testing-library": "^6.1.2",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.0.2",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
-    "sass": "^1.69.5",
     "storybook": "^8.0.6",
     "stylelint": "^15.11.0",
-    "stylelint-config-prettier-scss": "^1.0.0",
-    "stylelint-config-standard-scss": "^11.0.0",
-    "stylelint-order": "^6.0.3",
     "tailwindcss": "^3.3.5",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
@@ -100,5 +90,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "eslintConfig": {
+    "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "next", "prettier"],
+    "plugins": ["@typescript-eslint", "prettier"],
+    "rules": {
+      "prettier/prettier": "error",
+      "@typescript-eslint/no-unused-vars": "warn",
+      "no-console": "warn"
+    }
   }
 }
